Fixed z-index issues on modals, sidebar and footer

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -4,7 +4,7 @@ body{
 }
 
 footer {
-  z-index: 1000000000;
+  z-index: 1000;
   background-color: #007bff;
   padding: 1rem;
   position: fixed;
